--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project (Z64C)
 
 set (CMAKE_C_STANDARD 99)
 set (CMAKE_CXX_STANDARD 14)
+set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra")
+set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
 
 set (INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/")
 
@@ -11,8 +13,6 @@ add_custom_command (
 	OUTPUT ${HIREDIS_SRC}
 	COMMAND make
 	WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/hiredis/" )
-add_library (HIREDIS SHARED ${HIREDIS_SRC})
-set_target_properties (HIREDIS PROPERTIES LINKER_LANGUAGE CXX)
 
 set (CATCH2_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/Catch2/single_include/")
 set (CATCH2_SRC "${CATCH2_DIR}/catch.hpp")
@@ -20,9 +20,9 @@ add_library (CATCH2 INTERFACE)
 target_sources (CATCH2 INTERFACE ${CATCH2_SRC})
 
 file (GLOB Z64C_SRC "src/*.h" "src/*.c")
-add_library (Z64C_LIB SHARED ${Z64C_SRC})
+add_library (Z64C_LIB STATIC ${Z64C_SRC})
 target_include_directories (Z64C_LIB PUBLIC ${INCLUDE_DIR})
-target_link_libraries (Z64C_LIB HIREDIS)
+target_link_libraries (Z64C_LIB ${HIREDIS_SRC})
 
 add_executable (Z64C ${Z64C_SRC})
 target_include_directories (Z64C PUBLIC ${INCLUDE_DIR})
