Log APIs change, tablebases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package (ArrayFire REQUIRED)
 string (LENGTH "${CMAKE_SOURCE_DIR}/" SOURCE_PATH_LENGTH)
 add_definitions ("-D__FILE_PREFIX_SIZE__=${SOURCE_PATH_LENGTH}")
 
-# Modern C++
+# JSON C++ library
 set (JSON_BuildTests OFF CACHE INTERNAL "")
 add_subdirectory ("${LIB_DIR}json/")
 
