--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set (LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/")
 find_package (ArrayFire REQUIRED)
 
 # Useful macros
-string (LENGTH ${CMAKE_SOURCE_DIR} SOURCE_PATH_LENGTH)
+string (LENGTH "${CMAKE_CURRENT_SOURCE_DIR}/app/src/" SOURCE_PATH_LENGTH)
 add_definitions ("-D__FILE_PREFIX_SIZE__=${SOURCE_PATH_LENGTH}")
 
 add_library (CJSON "${LIB_DIR}/cJSON/cJSON.c")
