Delete app/ director, do small changes, improve build process

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 target/
 
+# Vim
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+.netrwhist
+
 # Prerequisites
 *.d
 
