--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ set (SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/")
 set (TEST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test/")
 
 string (LENGTH "${SRC_DIR}" SRC_DIR_LENGTH)
-string (TIMESTAMP "%Y-%m-%d" BUILD_DATE_ISO_8601)
+string (TIMESTAMP BUILD_DATE_ISO_8601 "%Y-%m-%d")
 
 # cJSON
 set (ENABLE_CJSON_TEST OFF)
