--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ set (LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/")
 set (SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/")
 set (TEST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test/")
 
-string (LENGTH "${SRC_DIR}" SRC_DIR_LENGTH)
+string (LENGTH "${CMAKE_CURRENT_SOURCE_DIR}/" PROJECT_DIR_LENGTH)
 string (TIMESTAMP BUILD_DATE_ISO_8601 "%Y-%m-%d")
 
 # cJSON
@@ -55,7 +55,7 @@ add_library (Z64C_LIB STATIC "${SRC_FILES}")
 target_include_directories (Z64C_LIB PUBLIC "${INCLUDE_DIR}" PUBLIC "${LIB_DIR}")
 target_link_libraries (Z64C_LIB cjson XXHASH)
 target_compile_definitions (Z64C_LIB PUBLIC
-	SRC_DIR_LENGTH=${SRC_DIR_LENGTH}
+	PROJECT_DIR_LENGTH=${PROJECT_DIR_LENGTH}
 	BUILD_DATE_ISO_8601=\"${BUILD_DATE_ISO_8601}\"
 	Z64C_VERSION_MAJOR=\"${PROJECT_VERSION_MAJOR}\"
 	Z64C_VERSION_MINOR=\"${PROJECT_VERSION_MINOR}\"
