Fix a few warnings in agent.c and remove OpenCL backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,22 +39,6 @@ string (TIMESTAMP BUILD_DATE_ISO_8601 "%Y-%m-%d")
 
 find_package (OpenCL REQUIRED)
 
-function (hexdump_resource source target)
-	# Triggers a CMake reconfiguration by adding resource files as dependencies.
-	configure_file ("${source}" "${CMAKE_CURRENT_BINARY_DIR}")
-	file (READ ${source} file_contents HEX)
-	get_filename_component (resource_name ${source} NAME_WE)
-	get_filename_component (resource_extension ${source} EXT)
-	string (REGEX REPLACE "([^a-zA-Z/d])" "_" resource_name "${resource_name}${resource_extension}")
-	string (REGEX REPLACE "([0-9a-f][0-9a-f])" "0x\\1," file_contents ${file_contents})
-	file (WRITE ${target} "const unsigned char ${resource_name}[] = {${file_contents}0};\n")
-endfunction ()
-
-# Resources hexdump
-set (RESOURCES_C "${CMAKE_CURRENT_BINARY_DIR}/resources.c")
-hexdump_resource ("${SRC_DIR}/core/opencl/kernels.cl" ${RESOURCES_C})
-add_library (RESOURCES STATIC "${RESOURCES_C}")
-
 # cJSON
 set (ENABLE_CJSON_TEST OFF)
 add_subdirectory ("${LIB_DIR}/cJSON/")
@@ -73,7 +57,7 @@ file (GLOB_RECURSE SRC_FILES "${INCLUDE_DIR}/*.h" "${SRC_DIR}/*.c")
 list (REMOVE_ITEM SRC_FILES "${SRC_DIR}/main.c")
 add_library (Z64C_LIB STATIC "${SRC_FILES}")
 target_include_directories (Z64C_LIB PUBLIC "${INCLUDE_DIR}" PUBLIC "${LIB_DIR}")
-target_link_libraries (Z64C_LIB cjson XXHASH TICTOC ${OpenCL_LIBRARIES} RESOURCES)
+target_link_libraries (Z64C_LIB cjson XXHASH TICTOC)
 target_compile_definitions (Z64C_LIB PUBLIC
 	PROJECT_DIR_LENGTH=${PROJECT_DIR_LENGTH}
 	BUILD_DATE_ISO_8601=\"${BUILD_DATE_ISO_8601}\"
