--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required (VERSION 3.4)
 set (CMAKE_POLICY_DEFAULT_CMP0048 NEW)
 set (CMAKE_POLICY_DEFAULT_CMP0042 NEW)
 
-project (Z64C VERSION 0.10.0 LANGUAGES C)
+project (Z64C VERSION 1.0.0 LANGUAGES C)
 
 set (CMAKE_C_FLAGS_DEBUG "-g -ftrapv")
 set (CMAKE_C_FLAGS_RELEASE "-O3")
@@ -35,7 +35,7 @@ set (SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/")
 set (TEST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test/")
 
 string (LENGTH "${CMAKE_CURRENT_SOURCE_DIR}/" PROJECT_DIR_LENGTH)
-string (TIMESTAMP BUILD_DATE_ISO_8601 "%Y-%m-%d")
+string (TIMESTAMP BUILD_DATE "%Y-%m-%d")
 
 find_package (OpenCL REQUIRED)
 
@@ -63,7 +63,7 @@ target_include_directories (Z64C_LIB PUBLIC "${INCLUDE_DIR}" PUBLIC "${LIB_DIR}"
 target_link_libraries (Z64C_LIB BASE64C cjson XXHASH TICTOC)
 target_compile_definitions (Z64C_LIB PUBLIC
 	PROJECT_DIR_LENGTH=${PROJECT_DIR_LENGTH}
-	BUILD_DATE_ISO_8601=\"${BUILD_DATE_ISO_8601}\"
+	BUILD_DATE=\"${BUILD_DATE}\"
 	Z64C_VERSION_MAJOR=\"${PROJECT_VERSION_MAJOR}\"
 	Z64C_VERSION_MINOR=\"${PROJECT_VERSION_MINOR}\"
 	Z64C_VERSION_PATCH=\"${PROJECT_VERSION_PATCH}\")
