--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,9 @@
 [submodule "lib/Unity"]
 	path = lib/Unity
 	url = https://github.com/ThrowTheSwitch/Unity
-[submodule "lib/tictoc"]
-	path = lib/tictoc
-	url = https://github.com/neysofu/tictoc
 [submodule "lib/base64.c"]
 	path = lib/base64.c
 	url = https://github.com/joedf/base64.c.git
+[submodule "lib/plibsys"]
+	path = lib/plibsys
+	url = https://github.com/saprykin/plibsys.git
