Add feedforward in NN with random weights.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,9 @@ string (TIMESTAMP BUILD_DATE "%Y-%m-%d")
 # cJSON
 set (ENABLE_CJSON_TEST OFF)
 add_subdirectory ("${LIB_DIR}/cJSON/")
+# Mersenne twister
+add_library (MT64 "${LIB_DIR}/mt-64/mt19937-64.c")
+set_property (TARGET MT64 PROPERTY C_STANDARD 99)
 # plibsys
 set (PLIBSYS_BUILD_DOC OFF)
 add_subdirectory ("${LIB_DIR}/plibsys/")
@@ -57,7 +60,7 @@ list (REMOVE_ITEM SRC_FILES "${SRC_DIR}/main.c")
 add_library (Z64C_LIB STATIC "${SRC_FILES}")
 target_include_directories (Z64C_LIB PUBLIC "${INCLUDE_DIR}")
 target_include_directories (Z64C_LIB SYSTEM PUBLIC "${LIB_DIR}")
-target_link_libraries (Z64C_LIB cjson plibsys XXHASH)
+target_link_libraries (Z64C_LIB cjson MT64 plibsys XXHASH)
 target_compile_definitions (Z64C_LIB PRIVATE
     PROJECT_BUILD_DATE=\"${BUILD_DATE}\"
     PROJECT_VERSION=\"${PROJECT_VERSION}\")
