--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ license = "PROPRIETARY"
 publish = false
 
 [dependencies]
+bitintr = "0.3"
 bytesize = "1"
 enum-map = "0.6"
 enum-map-derive = "0.4"
+lazy_static = "1"
 strum = "0.15.0"
 strum_macros = "0.15.0"
 
