--- a/app/zorro/Cargo.toml
+++ b/app/zorro/Cargo.toml
@@ -17,6 +17,8 @@ enum-map-derive = "0.4"
 lazy_static = "1"
 strum = "0.15.0"
 strum_macros = "0.15.0"
+zorro_common = { path = "../common" }
+zorro_chess = { path = "../chess" }
 
 [dev-dependencies]
 semver = "0.9"
