--- a/app/chess/Cargo.toml
+++ b/app/chess/Cargo.toml
@@ -8,6 +8,7 @@ bitintr = "0.3"
 enum-map = "0.6"
 enum-map-derive = "0.4"
 lazy_static = "1"
+rand = "0.7"
 strum = "0.15.0"
 strum_macros = "0.15.0"
 zorro_common = { path = "../common" }
