--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,5 +1,26 @@
-[workspace]
-members = [
-    "chess",
-    "zorro",
-]
+[package]
+name = "zorro"
+version = "2.2.0"
+authors = ["Filippo Costa <filippocosta.italy@gmail.com>"]
+build = "build.rs"
+readme = "README.md"
+edition = "2018"
+publish = false
+
+[dependencies]
+bitintr = "0.3"
+bytesize = "1"
+enum-map = "0.6"
+enum-map-derive = "0.4"
+lazy_static = "1"
+rand = "0.7"
+strum = "0.15.0"
+strum_macros = "0.15.0"
+webbrowser = "0.5.2"
+
+[dev-dependencies]
+semver = "0.9"
+
+[build-dependencies]
+chrono = "0.4.7"
+
