--- a/app/zorro/Cargo.toml
+++ b/app/zorro/Cargo.toml
@@ -4,7 +4,7 @@ version = "2.1.0"
 authors = ["Filippo Costa <filippocosta.italy@gmail.com>"]
 build = "build.rs"
 edition = "2018"
-repository = "https://github.com/neysofu/Z64C"
+repository = "https://github.com/neysofu/Zorro"
 readme = "README.md"
 license = "PROPRIETARY"
 publish = false
@@ -17,7 +17,7 @@ enum-map-derive = "0.4"
 lazy_static = "1"
 strum = "0.15.0"
 strum_macros = "0.15.0"
-zorro_chess = { path = "../chess" }
+crate = { path = "../chess" }
 webbrowser = "0.5.2"
 
 [dev-dependencies]
