--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ crossbeam-channel = "0.4"
 enum-map = "0.6"
 enum-map-derive = "0.4"
 rand = "0.7"
+rayon = "1.3.0"
 strum = "0.15.0"
 strum_macros = "0.15.0"
 webbrowser = "0.5.2"
