--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bytesize = "1"
 crossbeam-channel = "0.4"
 enum-map = "0.6"
 enum-map-derive = "0.4"
+lru = "0.5.2"
 rand = "0.7"
 rayon = "1.3.0"
 strum = "0.15.0"
